# memory-cards-fs

./: README.md  justfile  package.json
app/src/: App.tsx
app/src/components/: JoinModal.tsx
app/src/components/Game/: MutliGame.tsx  SelectFieldModal.tsx  SingleGame.tsx
app/src/components/Game/Multi/: Errors.tsx  PlayerInfo.tsx
app/src/pages/: Game.tsx
app/src/services/: connect.ts
app/src/state/: multi-game.ts  state.ts  ws.ts
app/types/: MyType.ts  Player.ts
backend/: Cargo.toml
backend/bindings/: Card.ts  ClientMessage.ts  GameState.ts  GameStatus.ts
backend/src/: main.rs
