[package]
name = "ws"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["ws"] }
fastrand = "2.3.0"
futures-util = "0.3.31"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["full"] }
tokio-tungstenite = "0.27.0"
ts-rs = "11.0.1"
tungstenite = "0.27.0"
uuid = { version = "1.18.0", features = ["v4"] }
